Revamp contacto.html with new design and content
Updated the contact page with new content, styles, and layout adjustments for improved user experience.

--- a/contacto.html
+++ b/contacto.html
@@ -4,60 +4,454 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Contacto | GG Contabilidad y Defensa Fiscal</title>
-  <meta name="description" content="Agenda una consulta con GG Contabilidad y Defensa Fiscal." />
+  <meta name="description" content="Ponte en contacto con nuestros expertos contables y fiscales. Asesoría personalizada y defensa fiscal." />
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Montserrat:wght@600;700&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="assets/styles.css">
+
+  <style>
+    :root {
+      --navy-deep: #0F2A44;
+      --navy-mid: #1A3A5C;
+      --gold-accent: #C9A961;
+      --gray-sophisticated: #556B7E;
+      --gray-light: #F7F9FB;
+      --border-subtle: #E1E8ED;
+      --input-bg: #F8FAFC;
+    }
+
+    body {
+      font-family: 'Inter', -apple-system, BlinkMacSystemFont, sans-serif;
+      color: var(--navy-deep);
+      line-height: 1.6;
+      background: #fff;
+      margin: 0;
+    }
+
+    /* HEADER AZUL */
+    .header {
+      background-color: var(--navy-deep);
+      position: fixed;
+      top: 0;
+      width: 100%;
+      z-index: 1000;
+      border-bottom: 1px solid rgba(255,255,255,0.1);
+    }
+
+    .container {
+      max-width: 1200px;
+      margin: 0 auto;
+      padding: 0 20px;
+    }
+
+    .header-inner {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      height: 80px;
+    }
+
+    .nav { display: flex; gap: 10px; }
+    .nav a {
+      color: #ffffff;
+      text-decoration: none;
+      font-weight: 500;
+      padding: 8px 16px;
+      border-radius: 8px;
+      transition: background 0.2s;
+    }
+    .nav a:hover {
+      background: rgba(255,255,255,0.1);
+      color: var(--gold-accent);
+    }
+    .nav a[aria-current="page"] {
+      background: rgba(255,255,255,0.15);
+      font-weight: 600;
+    }
+    .btn-nav {
+      border: 1px solid var(--gold-accent);
+      color: var(--gold-accent) !important;
+    }
+    .btn-nav:hover {
+      background: var(--gold-accent) !important;
+      color: #fff !important;
+    }
+
+    /* Hamburger Menu */
+    .hamburger {
+      display: none;
+      background: transparent;
+      border: 1px solid rgba(255,255,255,0.3);
+      color: #fff;
+      padding: 8px 12px;
+      border-radius: 6px;
+      cursor: pointer;
+    }
+
+    @media (max-width: 900px) {
+      .hamburger { display: block; }
+      .nav {
+        position: absolute;
+        top: 100%; left: 0; width: 100%;
+        background: #fff;
+        flex-direction: column;
+        padding: 20px;
+        box-shadow: 0 10px 20px rgba(0,0,0,0.1);
+        display: none;
+        border-bottom: 1px solid var(--border-subtle);
+      }
+      .nav.mobile-open { display: flex; }
+      .nav a { color: var(--navy-deep); padding: 12px; text-align: center; }
+    }
+
+    /* HERO */
+    .page-hero {
+      background: linear-gradient(135deg, #0F2A44 0%, #1A3A5C 100%);
+      color: #fff;
+      padding: calc(4.5rem + 80px) 0 3.5rem;
+      text-align: center;
+    }
+    .page-hero h1 {
+      font-family: 'Montserrat', sans-serif;
+      font-size: clamp(2rem, 5vw, 2.8rem);
+      font-weight: 700;
+      margin: 0 0 1rem;
+    }
+    .page-hero-subtitle {
+      font-size: 1.15rem;
+      opacity: 0.92;
+      max-width: 700px;
+      margin: 0 auto;
+    }
+
+    /* SECCIÓN DE TARJETAS DE CONTACTO */
+    .contact-info-section {
+      padding: 4rem 0 2rem;
+      background: #fff;
+    }
+    .contact-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      gap: 2rem;
+      max-width: 1200px;
+      margin: 0 auto;
+    }
+    .contact-card {
+      background: #fff;
+      border: 1px solid var(--border-subtle);
+      border-radius: 12px;
+      padding: 2rem;
+      text-align: center;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+    .contact-card:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 15px 30px rgba(15,42,68,0.08);
+      border-color: var(--gold-accent);
+    }
+    .icon-circle {
+      width: 60px;
+      height: 60px;
+      background: rgba(201,169,97,0.12);
+      color: var(--navy-deep);
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 1.8rem;
+      margin: 0 auto 1.5rem;
+    }
+    .contact-card h3 {
+      font-family: 'Montserrat', sans-serif;
+      font-size: 1.25rem;
+      margin: 0 0 0.8rem;
+      color: var(--navy-deep);
+    }
+    .contact-card p {
+      color: var(--gray-sophisticated);
+      margin-bottom: 1.5rem;
+      font-size: 0.95rem;
+    }
+    .contact-link {
+      color: var(--gold-accent);
+      font-weight: 700;
+      text-decoration: none;
+      font-size: 1rem;
+      border-bottom: 2px solid transparent;
+      transition: all 0.2s;
+    }
+    .contact-link:hover {
+      border-bottom-color: var(--gold-accent);
+      color: var(--navy-deep);
+    }
+
+    /* SECCIÓN DE FORMULARIO */
+    .form-section {
+      padding: 4rem 0;
+      background: var(--gray-light);
+    }
+    .form-container {
+      max-width: 700px;
+      margin: 0 auto;
+      background: #fff;
+      padding: 3rem;
+      border-radius: 16px;
+      box-shadow: 0 10px 40px rgba(15,42,68,0.06);
+      border: 1px solid var(--border-subtle);
+    }
+    .form-header {
+      text-align: center;
+      margin-bottom: 2.5rem;
+    }
+    .form-header h2 {
+      font-family: 'Montserrat', sans-serif;
+      color: var(--navy-deep);
+      font-size: 1.8rem;
+      margin-bottom: 0.5rem;
+    }
+    .form-group {
+      margin-bottom: 1.5rem;
+    }
+    .form-label {
+      display: block;
+      font-weight: 600;
+      margin-bottom: 0.5rem;
+      color: var(--navy-deep);
+      font-size: 0.9rem;
+    }
+    .form-input, .form-textarea {
+      width: 100%;
+      padding: 12px 16px;
+      border: 1px solid #CFD8DC;
+      border-radius: 8px;
+      background: var(--input-bg);
+      font-family: 'Inter', sans-serif;
+      font-size: 1rem;
+      color: var(--navy-deep);
+      transition: all 0.2s;
+      box-sizing: border-box; /* Asegura que el padding no rompa el ancho */
+    }
+    .form-input:focus, .form-textarea:focus {
+      outline: none;
+      border-color: var(--gold-accent);
+      background: #fff;
+      box-shadow: 0 0 0 3px rgba(201,169,97,0.15);
+    }
+    .form-row {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 1.5rem;
+    }
+    .btn-submit {
+      width: 100%;
+      padding: 14px;
+      background: var(--navy-deep);
+      color: #fff;
+      border: none;
+      border-radius: 8px;
+      font-size: 1rem;
+      font-weight: 600;
+      cursor: pointer;
+      transition: background 0.3s;
+      margin-top: 1rem;
+    }
+    .btn-submit:hover {
+      background: var(--navy-mid);
+    }
+
+    /* FOOTER */
+    .footer {
+      background: var(--navy-deep);
+      color: rgba(255,255,255,0.8);
+      padding: 3rem 0 2rem;
+      border-top: 1px solid rgba(255,255,255,0.1);
+    }
+    .footer-content {
+      max-width: 1200px;
+      margin: 0 auto;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 2rem;
+      padding: 0 1.5rem 2rem;
+    }
+    .footer-section h4 {
+      color: #fff;
+      font-family: 'Montserrat', sans-serif;
+      font-size: 1rem;
+      font-weight: 700;
+      margin: 0 0 1rem;
+      text-transform: uppercase;
+    }
+    .footer-links { list-style: none; padding: 0; margin: 0; }
+    .footer-links li { margin-bottom: 0.5rem; }
+    .footer-links a { color: rgba(255,255,255,0.7); text-decoration: none; transition: color 0.2s; }
+    .footer-links a:hover { color: var(--gold-accent); }
+    .footer-bottom { border-top: 1px solid rgba(255,255,255,0.1); padding: 1.5rem 1.5rem 0; text-align: center; font-size: 0.9rem; }
+
+    /* Responsive */
+    @media (max-width: 768px) {
+      .form-row { grid-template-columns: 1fr; gap: 0; }
+      .form-container { padding: 1.5rem; }
+      .page-hero { padding: calc(3.5rem + 80px) 0 2.5rem; }
+    }
+  </style>
 </head>
 
 <body>
+
 <header class="header">
   <div class="container header-inner">
     <a href="index.html" class="logo" aria-label="Inicio">
-      <img src="Logo.jpeg" alt="GG Contabilidad y Defensa Fiscal">
+      <img src="Logo.jpeg" alt="GG Contabilidad y Defensa Fiscal" style="height: 52px; width:auto;">
     </a>
 
-    <button id="hamburger" class="hamburger" aria-label="Abrir menú">Menú</button>
+    <button id="hamburger" class="hamburger" aria-label="Menú">Menú</button>
 
     <nav id="nav" class="nav" aria-label="Navegación principal">
       <a href="servicios.html">Servicios</a>
-      <a href="indicadores.html" aria-current="page">Indicadores</a>
+      <a href="Indicadores.html">Indicadores</a>
       <a href="inpc.html">INPC</a>
       <a href="enlaces.html">Recursos</a>
       <a href="Blog.html">Blog</a>
       <a href="nosotros.html">Nosotros</a>
-      <a href="contacto.html" class="btn-nav">Contacto</a>
+      <a href="contacto.html" aria-current="page" class="btn-nav">Contacto</a>
     </nav>
   </div>
 </header>
 
-<section class="section page-top contact">
+<section class="page-hero">
   <div class="container">
-    <h1 class="section-title">Contacto</h1>
-    <p class="section-subtitle">
-      Agenda una consulta por WhatsApp. Respuesta rápida y atención personalizada.
+    <h1>Hablemos de tu tranquilidad fiscal</h1>
+    <p class="page-hero-subtitle">
+      Estamos listos para asesorarte. Elige el medio de contacto que prefieras o déjanos un mensaje detallado.
     </p>
+  </div>
+</section>
 
-    <div class="grid">
-      <div class="card" style="grid-column: span 12;">
-        <h3>WhatsApp</h3>
-        <p>Escríbenos y dinos: tipo de contribuyente, actividad, y qué necesitas (cumplimiento / defensa / regularización).</p>
-        <a class="btn-primary" href="https://wa.me/525513110556" target="_blank" rel="noopener">Abrir WhatsApp</a>
-        <p style="margin-top:12px; color: var(--gray-muted); font-size: 0.95rem;">
-          Tip: si quieres que abra con mensaje prellenado, me dices y te lo dejo listo.
-        </p>
+<section class="contact-info-section">
+  <div class="container">
+    <div class="contact-grid">
+      
+      <div class="contact-card">
+        <div class="icon-circle">💬</div>
+        <h3>WhatsApp Directo</h3>
+        <p>Respuesta rápida para consultas urgentes o agendar citas.</p>
+        <a href="https://wa.me/525513110556" target="_blank" rel="noopener" class="contact-link">
+          Iniciar chat ahora →
+        </a>
       </div>
+
+      <div class="contact-card">
+        <div class="icon-circle">✉️</div>
+        <h3>Correo Electrónico</h3>
+        <p>Para envío de documentos, propuestas formales o descripciones detalladas.</p>
+        <a href="mailto:contacto@ggdefensafiscal.com.mx" class="contact-link">
+          contacto@ggdefensafiscal.com.mx
+        </a>
+      </div>
+
+      <div class="contact-card">
+        <div class="icon-circle">🕒</div>
+        <h3>Horario de Atención</h3>
+        <p>Lunes a Viernes<br>9:00 AM - 6:00 PM</p>
+        <span class="contact-link" style="cursor: default; border:none; color: var(--navy-deep);">
+          Atención Remota y Presencial
+        </span>
+      </div>
+
+    </div>
+  </div>
+</section>
+
+<section class="form-section">
+  <div class="container">
+    <div class="form-container">
+      <div class="form-header">
+        <h2>Envíanos un mensaje</h2>
+        <p style="color: var(--gray-sophisticated);">Completa el formulario y te responderemos en menos de 24 horas.</p>
+      </div>
+      
+      <form action="#" method="POST"> <div class="form-row">
+          <div class="form-group">
+            <label for="nombre" class="form-label">Nombre completo</label>
+            <input type="text" id="nombre" name="nombre" class="form-input" placeholder="Ej. Juan Pérez" required>
+          </div>
+          <div class="form-group">
+            <label for="telefono" class="form-label">Teléfono / Celular</label>
+            <input type="tel" id="telefono" name="telefono" class="form-input" placeholder="Ej. 55 1234 5678" required>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label for="email" class="form-label">Correo electrónico</label>
+          <input type="email" id="email" name="email" class="form-input" placeholder="nombre@empresa.com" required>
+        </div>
+
+        <div class="form-group">
+          <label for="asunto" class="form-label">Tipo de servicio</label>
+          <select id="asunto" name="asunto" class="form-input">
+            <option value="asesoria">Asesoría Contable / Fiscal</option>
+            <option value="defensa">Defensa Fiscal (Multas/Auditorías)</option>
+            <option value="regularizacion">Regularización de Obligaciones</option>
+            <option value="otro">Otro</option>
+          </select>
+        </div>
+
+        <div class="form-group">
+          <label for="mensaje" class="form-label">¿En qué podemos ayudarte?</label>
+          <textarea id="mensaje" name="mensaje" class="form-textarea" rows="4" placeholder="Describe brevemente tu situación..."></textarea>
+        </div>
+
+        <button type="submit" class="btn-submit">Enviar Mensaje</button>
+      </form>
     </div>
   </div>
 </section>
 
 <footer class="footer">
   <div class="container">
-    <strong>GG Contabilidad y Defensa Fiscal</strong>
-    <p style="margin: 10px 0 0;">© 2025. Todos los derechos reservados.</p>
+    <div class="footer-content">
+      <div class="footer-section">
+        <h4>GG Contabilidad</h4>
+        <p style="margin:0; line-height:1.6;">Despacho especializado en asesoría contable, fiscal y defensa ante autoridades.</p>
+      </div>
+
+      <div class="footer-section">
+        <h4>Servicios</h4>
+        <ul class="footer-links">
+          <li><a href="servicios.html">Contabilidad</a></li>
+          <li><a href="servicios.html">Cumplimiento fiscal</a></li>
+          <li><a href="servicios.html">Defensa fiscal</a></li>
+          <li><a href="servicios.html">Comercio exterior</a></li>
+        </ul>
+      </div>
+
+      <div class="footer-section">
+        <h4>Recursos</h4>
+        <ul class="footer-links">
+          <li><a href="Indicadores.html">Indicadores</a></li>
+          <li><a href="inpc.html">INPC</a></li>
+          <li><a href="enlaces.html">Sitios oficiales</a></li>
+          <li><a href="Blog.html">Blog técnico</a></li>
+        </ul>
+      </div>
+
+      <div class="footer-section">
+        <h4>Contacto</h4>
+        <ul class="footer-links">
+          <li><a href="contacto.html">Formulario</a></li>
+          <li><a href="nosotros.html">Acerca de nosotros</a></li>
+          <li><a href="https://wa.me/525513110556" target="_blank" rel="noopener">WhatsApp</a></li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="footer-bottom">
+      <p style="margin:0;">© 2025 GG Contabilidad y Defensa Fiscal. Todos los derechos reservados.</p>
+    </div>
   </div>
 </footer>
 
@@ -73,6 +467,6 @@
     a.addEventListener("click", () => nav.classList.remove("mobile-open"));
   });
 </script>
+
 </body>
 </html>
-
